--- a/package.json
+++ b/package.json
@@ -1,22 +1,37 @@
 {
-  "name": "asclepius",
+  "name": "npx",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
+    "@dagrejs/dagre": "^1.0.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react-dom": "18.2.7",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.11",
-    "next": "13.4.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "eslint-config-next": "13.4.12",
+    "next": "^13.4.12",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "react-webpage-thumbnail": "^0.0.6",
+    "reactflow": "^11.7.4",
+    "redux": "^4.2.1",
+    "video-react": "^0.16.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.3",
+    "@types/react": "^18.2.15",
+    "@types/video-react": "^0.15.1",
+    "sass": "^1.64.1",
+    "typescript": "^5.1.6"
   }
 }
