--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@dagrejs/dagre": "^1.0.2",
+    "@prisma/client": "^5.1.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-dom": "18.2.7",
     "eslint": "8.45.0",
@@ -19,8 +20,11 @@
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.0",
+    "quill": "^1.3.7",
+    "quill-html-edit-button": "^2.2.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-webpage-thumbnail": "^0.0.6",
     "reactflow": "^11.7.4",
@@ -31,7 +35,10 @@
     "@types/node": "^20.4.3",
     "@types/react": "^18.2.15",
     "@types/video-react": "^0.15.1",
+    "node-sass": "^9.0.0",
+    "prisma": "^5.1.1",
     "sass": "^1.64.1",
+    "sass-loader": "^13.3.2",
     "typescript": "^5.1.6"
   }
 }
