--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "checkJs": false,
     "skipLibCheck": true,
     "strict": true,
-    "forceConsistentCasingInFileNames": true,
+    "forceConsistentCasingInFileNames": false,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
