--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "quill-html-edit-button": "^2.2.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.13.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-webpage-thumbnail": "^0.0.6",
