--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "lodash": "^4.17.21",
     "next": "^13.4.12",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
@@ -25,6 +26,7 @@
     "quill-html-edit-button": "^2.2.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-link-preview": "^0.1.3",
     "react-player": "^2.13.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
@@ -34,6 +36,7 @@
     "video-react": "^0.16.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.200",
     "@types/node": "^20.4.3",
     "@types/react": "^18.2.15",
     "@types/video-react": "^0.15.1",
