--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@dagrejs/dagre": "^1.0.2",
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.5.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/auth-ui-react": "^0.4.6",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/ssr": "^0.0.9",
+    "@supabase/supabase-js": "^2.38.4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/react-dom": "18.2.7",
+    "bcryptjs": "^2.4.3",
     "classnames": "^2.3.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
@@ -25,6 +35,7 @@
     "quill-html-edit-button": "^2.2.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-player": "^2.13.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
@@ -38,7 +49,7 @@
     "@types/react": "^18.2.15",
     "@types/video-react": "^0.15.1",
     "node-sass": "^9.0.0",
-    "prisma": "^5.1.1",
+    "prisma": "^5.5.2",
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
     "typescript": "^5.1.6"
