--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "prisma generate && next build",
     "export": "next export",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "lint": "next lint"
   },
   "prisma": {
