clean files and push dockerfile

--- a/package.json
+++ b/package.json
@@ -4,17 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "export": "next export",
-    "start": "next start -p $PORT",
+    "start": "next start",
     "lint": "next lint"
-  },
-  "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@dagrejs/dagre": "^1.0.2",
-    "@prisma/client": "^5.5.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/auth-ui-react": "^0.4.6",
@@ -51,7 +47,6 @@
     "@types/react": "^18.2.15",
     "@types/video-react": "^0.15.1",
     "node-sass": "^9.0.0",
-    "prisma": "^5.5.2",
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
     "typescript": "^5.1.6"
