--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.38.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.3.2",
     "eslint": "8.45.0",
@@ -34,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-player": "^2.13.0",
+    "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-webpage-thumbnail": "^0.0.6",
