--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "13.4.12",
     "lodash": "^4.17.21",
     "next": "^13.4.12",
+    "nodemailer": "^6.9.7",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.0",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.200",
     "@types/node": "^20.4.3",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.15",
     "@types/video-react": "^0.15.1",
     "node-sass": "^9.0.0",
