--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "classnames": "^2.3.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "next": "^13.4.12",
+    "node-mailjet": "^6.0.5",
     "nodemailer": "^6.9.7",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
@@ -46,6 +48,8 @@
     "video-react": "^0.16.0"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.200",
     "@types/node": "^20.4.3",
     "@types/nodemailer": "^6.4.14",
