--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "html2pdf.js": "^0.10.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "next": "^13.4.12",
