--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "video-react": "^0.16.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.200",
