--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-webpage-thumbnail": "^0.0.6",
+    "react-intersection-observer": "9.10.2",
     "reactflow": "^11.7.4",
     "recharts": "^2.11.0",
     "redux": "^4.2.1",
