add xlsx package

--- a/package.json
+++ b/package.json
@@ -40,17 +40,18 @@
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.48.2",
+    "react-intersection-observer": "9.10.2",
     "react-player": "^2.13.0",
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-webpage-thumbnail": "^0.0.6",
-    "react-intersection-observer": "9.10.2",
     "reactflow": "^11.7.4",
     "recharts": "^2.11.0",
     "redux": "^4.2.1",
     "swiper": "^11.0.7",
-    "video-react": "^0.16.0"
+    "video-react": "^0.16.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
