--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
+    "react-scrollbars-custom": "^4.1.1",
     "react-webpage-thumbnail": "^0.0.6",
     "reactflow": "^11.7.4",
     "recharts": "^2.11.0",
